--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.31.0",
-    "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-tsparticles": "^2.1.4",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.1"
   },
